[gd_scene load_steps=4 format=3 uid="uid://d7whu5cycmvl"]

[ext_resource type="Script" path="res://scripts/displays/scene_menu.gd" id="1_id1lk"]
[ext_resource type="Texture2D" uid="uid://b0cfukukmdgnq" path="res://assets/logos/forest.png" id="1_qb1g4"]
[ext_resource type="Texture2D" uid="uid://c4ag6lpfbsepk" path="res://assets/logos/underwater.png" id="2_g3vta"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_id1lk")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Forest" type="TextureButton" parent="CanvasLayer"]
offset_left = 53.0
offset_top = 40.0
offset_right = 245.0
offset_bottom = 92.0
scale = Vector2(0.12, 0.12)
texture_normal = ExtResource("1_qb1g4")
stretch_mode = 0

[node name="Desert" type="TextureButton" parent="CanvasLayer"]
offset_left = 631.0
offset_top = 59.0
offset_right = 823.0
offset_bottom = 111.0
scale = Vector2(0.12, 0.12)

[node name="Underwater" type="TextureButton" parent="CanvasLayer"]
offset_left = 79.0
offset_top = 350.0
offset_right = 3919.0
offset_bottom = 2510.0
scale = Vector2(0.12, 0.12)
texture_normal = ExtResource("2_g3vta")

[node name="Dream" type="TextureButton" parent="CanvasLayer"]
offset_left = 625.0
offset_top = 348.0
offset_right = 817.0
offset_bottom = 400.0
scale = Vector2(0.12, 0.12)

[connection signal="pressed" from="CanvasLayer/Forest" to="." method="_on_forest_pressed"]
[connection signal="pressed" from="CanvasLayer/Desert" to="." method="_on_desert_pressed"]
[connection signal="pressed" from="CanvasLayer/Underwater" to="." method="_on_underwater_pressed"]
[connection signal="pressed" from="CanvasLayer/Dream" to="." method="_on_dream_pressed"]
